[build-system]
requires = ["setuptools>=68", "wheel", "ruff"]
build-backend = "setuptools.build_meta"

[project]
name = "japantown_prepared_monitor"
version = "0.2.1"
description = "Monitor air quality, water levels, etc around Japantown San Jose, CA."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests~=2.28",
    "PyYAML~=6.0",
    "diskcache~=5.6",
    "python-dotenv~=1.0.0",
]

[project.scripts]
japantown_prepared_monitor = "japantown_prepared.monitor.monitor:main"

[tool.flit.module]
name = "japantown_prepared.monitor"

[tool.ruff]
line-length = 88